<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_goneMarginTop="250dp"
    tools:context=".SigninAndRegistrationActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.1"
        android:foregroundGravity="center"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/background"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="0dp" />

    <Button
        android:id="@+id/register_Btn"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@android:color/transparent"
        android:fontFamily="@font/love_ya_like_a_sister"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="@+id/register_new_here"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="@+id/register_new_here"
        app:layout_constraintTop_toBottomOf="@+id/register_new_here"
        app:strokeColor="@color/blue"
        app:strokeWidth="2dp" />

    <TextView
        android:id="@+id/register_new_here"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/love_ya_like_a_sister"
        android:text="@string/new_here"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/login_Btn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/login_Btn"
        app:layout_constraintTop_toBottomOf="@+id/login_Btn" />

    <Button
        android:id="@+id/login_Btn"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@android:color/transparent"
        android:fontFamily="@font/love_ya_like_a_sister"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="@+id/login_password"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/login_password"
        app:layout_constraintTop_toBottomOf="@+id/login_password"
        app:layout_goneMarginTop="300dp"
        app:strokeColor="@color/red"
        app:strokeWidth="2dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/love_ya_like_a_sister"
        android:text="@string/blog"
        android:textColor="@color/black"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/love_ya_like_a_sister"
        android:text="@string/share_your_story_n_with_us"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_red_shape"
        android:ems="10"
        android:fontFamily="@font/love_ya_like_a_sister"
        android:gravity="center"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/black"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_red_shape"
        android:ems="10"
        android:fontFamily="@font/love_ya_like_a_sister"
        android:gravity="center"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textColorHint="@color/black"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/login_email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/login_email"
        app:layout_constraintTop_toBottomOf="@+id/login_email" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="200dp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <ImageView
            android:id="@+id/register_user_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:srcCompat="@drawable/logo" />
    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/register_name"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_blue_shape"
        android:ems="10"
        android:fontFamily="@font/love_ya_like_a_sister"
        android:gravity="center"
        android:hint="Enter Your Name"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <EditText
        android:id="@+id/register_email"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_blue_shape"
        android:ems="10"
        android:fontFamily="@font/love_ya_like_a_sister"
        android:gravity="center"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/register_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/register_name"
        app:layout_constraintTop_toBottomOf="@+id/register_name" />


    <EditText
        android:id="@+id/register_password"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_blue_shape"
        android:fontFamily="@font/love_ya_like_a_sister"
        android:gravity="center"
        android:hint="Enter Your Password"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/register_email"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/register_email"
        app:layout_constraintTop_toBottomOf="@+id/register_email"/>




</androidx.constraintlayout.widget.ConstraintLayout>